--- a/.gitignore
+++ b/.gitignore
@@ -5,19 +5,14 @@ packrat/src/
 # History files
 .Rhistory
 .Rapp.history
-
 # Session Data files
 .RData
-
 # Example code in package build process
 *-Ex.R
-
 # RStudio files
-.Rproj.user/
-
+.Rproj.user
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
